JSON data now populated in indeex.html page.

--- a/codingNinjas/Frontend/MusicPlayer/artist.html
+++ b/codingNinjas/Frontend/MusicPlayer/artist.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="container-content item-with-bg">
-                    <ul class="list-in-container playlist-ul">
+                    <ul id="related-artists" class="list-in-container playlist-ul">
                         <li class="playlist-li-in-container">
                             <div class="playlist-item item-with-bg">
                                 <div class="left-half">
@@ -389,7 +389,7 @@
                 </div>
 
                 <div class="container-content item-with-bg">
-                    <ul class="list-in-container playlist-ul">
+                    <ul id="related-songs" class="list-in-container playlist-ul">
                         <li class="playlist-li-in-container">
                             <div class="playlist-item item-with-bg">
                                 <div class="left-half">
