MusicPlayer: Carousel data templated from JSON now.

--- a/codingNinjas/Frontend/MusicPlayer/index.html
+++ b/codingNinjas/Frontend/MusicPlayer/index.html
@@ -76,43 +76,8 @@
             </button>
             <div class="carousel">
                 <div class="carousel_track-container">
-                    <ul class="carousel_track">
-                        <li class="carousel-slide current-slide">
-                            <img
-                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
-                        <li class="carousel-slide">
-                            <img
-                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
-                        <li class="carousel-slide">
-                            <img
-                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
-                        <li class="carousel-slide">
-                            <img
-                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
-                        <li class="carousel-slide">
-                            <img
-                                src="https://images.pexels.com/photos/210887/pexels-photo-210887.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
-                        <li class="carousel-slide">
-                            <img
-                                src="https://images.pexels.com/photos/5650956/pexels-photo-5650956.jpeg"
-                                class="carousel-slide-img"
-                            />
-                        </li>
+                    <ul id="carousel_track" class="carousel_track">
+                        <!-- Code injected here using 'html-injector-indexPage.js' -->
                     </ul>
                 </div>
             </div>
